--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <li>
             <a href="#projects" class="md:hover:underline drop-shadow-lg text-xl block font-bold py-2 pl-3 pr-4 rounded hover:bg-gray-200 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0">projects</a>
           </li>
+          <li>
+            <a href="/blogs/index.html" class="md:hover:underline drop-shadow-lg text-xl block font-bold py-2 pl-3 pr-4 rounded hover:bg-gray-200 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0">blogs</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -76,7 +79,7 @@
   <div class="flex px-2 justify-center m-0 mb-28 md:px-80">
     <div class="flex flex-col container w-max h-max items-center md:justify-center m-0 md:flex-row">
       <div class="flex bg-orange-400 w-80 h-96 bg-cover bg-center mb-5 mr-0 m-0 md:mr-16 drop-shadow-lg" style="background-image: url(/media/am.jpg)"></div>
-      <div class="flex justify-center items-center w-80 m-0 px-10 md:px-0 md:text-left text-center"><p>Greetings! I am a developer on Source Engine. Basically level design. I am also a front-end developer. Currently manager and developer in <a href="https://rndevs.online/" class="shadow-none"><span class="bg-white before:block begore:absolute before:-inset-1 before:-skew-y-3 hover:bg-website relative inline-block text-black hover:text-pink shadow-none">rndev.online</span></a></p></div>
+      <div class="flex justify-center items-center w-80 m-0 px-10 md:px-0 md:text-left text-center"><p>Greetings! I am a developer on Source Engine. Basically level design. I am also a front-end developer. Currently manager and developer in <a href="https://rndevs.online/" class="shadow-none"><span class="bg-white before:block begore:absolute before:-inset-1 before:-skew-y-3 hover:bg-website relative inline-block text-black hover:text-pink shadow-none">RN Collective</span></a></p></div>
     </div>
   </div>
 
@@ -238,9 +241,6 @@
       </li>
       <li>
           <a href="https://www.youtube.com/channel/UCt5FiVUoCsoMTIRHyP8Fx8A" class="mr-4 hover:underline md:mr-6 drop-shadow-lg">YouTube</a>
-      </li>
-      <li>
-          <a href="https://instagram.com/pomercz" class="mr-4 hover:underline md:mr-6 drop-shadow-lg">Instagram</a>
       </li>
       <li>
           <a href="https://t.me/pomercz" class="hover:underline drop-shadow-lg">Telegram</a>
