--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="#projects" class="md:hover:underline drop-shadow-lg text-xl block font-bold py-2 pl-3 pr-4 rounded hover:bg-gray-200 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0">projects</a>
           </li>
           <li>
-            <a href="/blogs/index.html" class="md:hover:underline drop-shadow-lg text-xl block font-bold py-2 pl-3 pr-4 rounded hover:bg-gray-200 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0">blogs</a>
+            <a href="https://mpstudio.space/blogs/index.html" class="md:hover:underline drop-shadow-lg text-xl block font-bold py-2 pl-3 pr-4 rounded hover:bg-gray-200 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0">blogs</a>
           </li>
         </ul>
       </div>
